# Data-Science-Projects

Employ-Attrition/: main.ipynb  pyproject.toml
House Price Prediction/: main.ipynb
Income Prediction/: main.ipynb
